Drag and drop - Fix gap between items

--- a/src/App.css
+++ b/src/App.css
@@ -131,8 +131,13 @@ li {
   padding-left: 5px; /* Add padding otherwise cursor disappears on empty elements */
   /* Cannot use padding-right, as it throws off the cursor when editing end of line. */
   margin-left: -5px; /* Offset padding */
-  padding-top: 0.501em; /* padding-bottom will increase the click area but not the size of the container since the element is inline. Add padding-bottom to .child separately by the same amount. */
+  padding-bottom: 0.25em;
+  padding-top: 0.25em; /* padding-bottom will increase the click area but not the size of the container since the element is inline. Add padding-bottom to .child separately by the same amount. */
   /*padding-bottom: 0.501em;*/ /* This changes the height of the cursor on mobile safari. */
+}
+
+.mobile .child [contenteditable] {
+  padding-bottom: 0;
 }
 
 .children .child-heading > [contenteditable] {
@@ -145,9 +150,11 @@ li {
   margin-bottom: 0;
 }
 
+.children .child:first-child {
+  padding-top: 0.5em;
+}
+
 .children .children {
-  margin-top: 3px;
-  margin-bottom: 8px;
   /* create stacking context so helper appears above */
   position: relative;
   z-index: 1;
@@ -379,8 +386,9 @@ h1 .num-contexts {
 
 .child {
   position: relative; /* So that child-heading::before bullet can be positioned; */
+  margin-left: -100px; /* must use margin-left not left so that content wrapping is not affected
   margin-top: 0.501em; /* Match editable padding */
-  margin-bottom: 0.501em;
+  padding: 0.2em 0 0.2em 100px;
 }
 
 .child::before {
@@ -440,6 +448,12 @@ h1 .num-contexts {
   font-size: 280%;
   opacity: 0.2;
   pointer-events: none; /* prevent overlay bullet from overlapping with the element above it. Cannot be fixed with height, width, or line-height */
+  margin-left: 100px; /* match drop-hover */
+  margin-top: 0.08em;
+}
+
+.child.editing:first-of-type > .child-heading::before {
+  margin-top: 0.18em;
 }
 
 .mobile .child.editing > .child-heading::before {
@@ -860,28 +874,38 @@ code {
 }
 
 /* the bar that displays on hover when moving items */
-.drop-hover::before {
-  content: '';
-  width: 100%;
-  left: -1.3em;
-  top: -0.3em;
+.drop-hover {
   position: absolute;
+  width: calc(100% - 80px);
+  margin-top: -0.3em;
+  margin-left: -0.7em;
   background-color: lightblue;
   height: 3px;
   border-radius: 99px;
 }
 
-/* the drop target at the end of a context */
-.drop-end {
-  position: relative; /* contain drop-hover */
-  width: 100%;
-  height: 10px;
-  position: absolute;
-  margin-left: -1.3em; /* where bullet would go if it was a real item */
-  margin-top: -0.4em;
+.children .child:first-child > .drop-hover {
+  margin-top: -0.3em;
 }
 
-.drop-end .drop-hover::before {
-  left: 0;
-  top: 0;
+/* the drop target at the end of a context */
+.drop-end {
+  position: absolute;
+  width: calc(100% - 38px);
+  height: 10px;
+}
+
+/* for some reason the drop-end in the outermost ul is too wide */
+.drop-end.last {
+  width: calc(100% - 161px);
+}
+
+.child.drop-end::before {
+  display: none;
+}
+
+.drop-end .drop-hover {
+  /*background-color: tomato;*/
+  margin-left: -1.25em;
+  width: calc(100% - 41px);
 }
